# attinyrtc

./: CMakeLists.txt  LICENSE  README.md  main.c
